--- a/ParkingTicket/ParkingTicket.csproj
+++ b/ParkingTicket/ParkingTicket.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Car.cs" />
     <Compile Include="Cop.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
